--- a/index.html
+++ b/index.html
@@ -1,8 +1,39 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <title>Title</title>
+        <title>Frequently Asked Questions</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     </head>
-    <body></body>
+    <body>
+        <section id="section1">
+            <h1>Frequently Asked Questions</h1>
+            <p>Browse through the most frequently asked questions</p>
+        </section>
+        <section id="section2">
+            <h2>How can I track my order?</h2>
+            <p>You can track your order using the following steps:</p>
+            <ol>
+                <li>Go to the Order <a href="#">Tracking page.</a></li>
+                <li>Enter your order number and email address.</li>
+                <li>Click on the Track Order button to veiw the current status of your shipment.</li>
+            </ol>
+            <p>If you encounter any issues, please visit our <a href="#">Help Center.</a></p>
+            <hr />
+            <h2>What is your return policy?</h2>
+            <p>We offer a 30-day return policy on most items. Here are some key points:</p>
+            <ul>
+                <li><strong>Items must be in original condition:</strong> Unworn, unused, and unwashed.</li>
+                <li>
+                    <strong>Include original packaging and tags:</strong> All items should be returned with their
+                    original packaging and tages.
+                </li>
+                <li><strong>Proof of purchase:</strong> A receipt or proof of purchase is required.</li>
+            </ul>
+            <p>For more detailed information, read our full <a href="#">Return Policy.</a></p>
+        </section>
+    </body>
 </html>
