--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     </head>
     <body>
         <section id="section1">
+            <div>
             <h1>Frequently Asked Questions</h1>
             <p>Browse through the most frequently asked questions</p>
+            </div>
         </section>
         <section id="section2">
             <h2>How can I track my order?</h2>
