--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <section id="section1">
-            <div>
+            <div class="div">
             <h1>Frequently Asked Questions</h1>
             <p>Browse through the most frequently asked questions</p>
             </div>
