--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Afacad+Flux:wght@100..1000&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     </head>
     <body>
-        <section id="section1">
+        <header id="header1">
             <div class="div">
             <h1>Frequently Asked Questions</h1>
             <p>Browse through the most frequently asked questions</p>
             </div>
-        </section>
+        </header>
         <section id="section2">
             <h2>How can I track my order?</h2>
             <p>You can track your order using the following steps:</p>
